--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -53,7 +53,8 @@
     "sparkpost": "^2.1.2",
     "typeorm": "0.2.0",
     "uuid": "^3.2.1",
-    "yup": "^0.24.1"
+    "yup": "^0.24.1",
+    "@airbnbclone/helpers": "1.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
