--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "3.2.0",
     "typescript": "3.6.4",
     "yup": "^0.27.0",
-    "@airbnbclone/helpers": "1.0.0"
+    "@airbnbclone/helpers": "1.0.0",
+    "@airbnbclone/controllers": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
