--- a/packages/controllers/tsconfig.json
+++ b/packages/controllers/tsconfig.json
@@ -16,7 +16,7 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "types": ["jest", "node", "react", "react-dom", "react-router-dom"],
+    "types": ["node", "react", "react-dom", "react-router-dom"],
     "skipLibCheck": true,
     "declaration": true
   },
