--- a/packages/controllers/package.json
+++ b/packages/controllers/package.json
@@ -5,7 +5,10 @@
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "introspect": "apollo-codegen introspect-schema http://localhost:4000 --output schema.json",
+    "generate": "apoloo-codegen generate src/**/*.tsx --shcema schema.json --target ts-modern --output src/operation-result-types.ts",
+    "gen-types": "npm run introspect && npm run generate"
   },
   "dependencies": {
     "graphql": "^14.5.8",
@@ -18,6 +21,7 @@
     "@types/node": "^12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "apollo-codegen": "^0.20.2",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.6.4"
