--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,8 @@
   "name": "@airbnbclone/server",
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
+  "main": "dist/index.js",
+  "typing": "dist/index.d.ts",
   "devDependencies": {
     "@gql2ts/types": "^1.8.0",
     "@types/bcryptjs": "^2.4.1",
@@ -19,17 +21,20 @@
     "@types/uuid": "^3.4.3",
     "@types/ws": "^5.1.2",
     "@types/yup": "^0.24.3",
+    "copyfiles": "2.0.0",
     "gql2ts": "^1.7.2",
     "nodemon": "^1.17.3",
     "ts-jest": "^22.4.4",
     "ts-node": "6.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.12.0",
-    "typescript": "^2.9.1"
+    "typescript": "2.9.1"
   },
   "dependencies": {
+    "@airbnbclone/helpers": "1.0.0",
     "@gql2ts/from-schema": "^1.8.0",
     "@types/express": "^4.11.1",
+    "@types/graphql": "^14.5.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^3.3.3",
@@ -39,7 +44,7 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "glob": "^7.1.2",
-    "graphql": "^0.13.2",
+    "graphql": "0.13.2",
     "graphql-import": "^0.5.0",
     "graphql-tools": "^3.0.0",
     "graphql-yoga": "^1.9.2",
@@ -53,12 +58,12 @@
     "sparkpost": "^2.1.2",
     "typeorm": "0.2.0",
     "uuid": "^3.2.1",
-    "yup": "^0.24.1",
-    "@airbnbclone/helpers": "1.0.0"
+    "yup": "^0.24.1"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --watch",
+    "build": "rm -rf ./dist && tsc && copyfiles -u 1 src/**/*.graphql dist",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
