deploy server to heroku, deploy web to netlify

--- a/packages/server/.env.prod
+++ b/packages/server/.env.prod
@@ -1,2 +1,2 @@
 SPARKPOST_API_KEY="121ac2c3027dccc24bb28ec31f0f359ea5736ef8"
-FRONTEND_HOST="http://localhost:3000"
+FRONTEND_HOST=https://5dab0787ba843d05a71d5349--airbnbcloneapp.netlify.com
