--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "build:server": "lerna run build --scope={@airbnbclone/helpers,@airbnbclone/server}"
+    "build:server": "lerna run build --scope={@airbnbclone/helpers,@airbnbclone/server}",
+    "build:web": "lerna run build --scope={@airbnbclone/helpers,@airbnbclone/web}"
   },
   "workspaces": {
     "packages": [
