react native setup

--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
       "**/graphql",
       "**/apollo-server-express",
       "**/apollo-server-core",
-      "**/graphql-yoga"
+      "**/graphql-yoga",
+      "**/react-native",
+      "**/react-native/**",
+      "**/expo",
+      "**/expo/**",
+      "**/react-native-typescript-transformer",
+      "**/react-native-typescript-transformer/**",
+      "**/metro-bundler-config-yarn-workspaces",
+      "**/metro-bundler-config-yarn-workspaces/**"
     ]
   },
   "name": "airbnbclone",
