--- a/package.json
+++ b/package.json
@@ -13,15 +13,7 @@
       "**/graphql",
       "**/apollo-server-express",
       "**/apollo-server-core",
-      "**/graphql-yoga",
-      "**/react-native",
-      "**/react-native/**",
-      "**/expo",
-      "**/expo/**",
-      "**/react-native-typescript-transformer",
-      "**/react-native-typescript-transformer/**",
-      "**/metro-bundler-config-yarn-workspaces",
-      "**/metro-bundler-config-yarn-workspaces/**"
+      "**/graphql-yoga"
     ]
   },
   "name": "airbnbclone",
